tests/baselines/reference/destructuringPropertyParameters1.errors.txt
tests/cases/conformance/es6/destructuring/destructuringPropertyParameters1.ts(25,23): error TS2365: Operator '===' cannot be applied to types 'string' and 'number'.
tests/cases/conformance/es6/destructuring/destructuringPropertyParameters1.ts(25,40): error TS2365: Operator '===' cannot be applied to types 'number' and 'boolean'.
tests/cases/conformance/es6/destructuring/destructuringPropertyParameters1.ts(28,23): error TS1005: ':' expected.
tests/cases/conformance/es6/destructuring/destructuringPropertyParameters1.ts(29,23): error TS2365: Operator '===' cannot be applied to types 'number' and 'string'.
tests/cases/conformance/es6/destructuring/destructuringPropertyParameters1.ts(29,40): error TS2365: Operator '===' cannot be applied to types 'string' and 'boolean'.


==== tests/cases/conformance/es6/destructuring/destructuringPropertyParameters1.ts (5 errors) ====
    class C1 {
        constructor(public [x, y, z]: string[]) {
        }
    }
    
    type TupleType1 = [string, number, boolean];
    
    class C2 {
        constructor(public [x, y, z]: TupleType1) {
        }
    }
    
    type ObjType1 = { x: number; y: string; z: boolean }
    
    class C3 {
        constructor(public { x, y, z }: ObjType1) {
        }
    }
    
    var c1 = new C1([]);
    c1 = new C1(["larry", "{curly}", "moe"]);
    var useC1Properties = c1.x === c1.y && c1.y === c1.z;
    
    var c2 = new C2(["10", 10, !!10]);
    var useC2Properties = c2.x === c2.y && c2.y === c2.z;
                          ~~~~~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'string' and 'number'.
                                           ~~~~~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'number' and 'boolean'.
    
    var c3 = new C3({x: 0, y: "", z: false});
    c3 = new C3({x: 0, "y", z: true});
                          ~
!!! error TS1005: ':' expected.
    var useC3Properties = c3.x === c3.y && c3.y === c3.z;
                          ~~~~~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'number' and 'string'.
                                           ~~~~~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'string' and 'boolean'.